gcc-14.2.0/gcc/testsuite/gdc.test/compilable/extra-files/pkgDIP37_10354/mfoo.d
version https://git-lfs.github.com/spec/v1
oid sha256:2236a156f6065752367186cb3356791b2ddbe2c955d2e189255bb4e541ef1324
size 45
